--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Snow's Personal Site</title>
+<style >
+
+body{
+  background-color: #abf0e9;
+}
+
+hr{
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  border-color: grey;
+  width: 5%;
+
+}
+</style>
+
 </head>
 
 <body>
