--- a/index.html
+++ b/index.html
@@ -4,21 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Snow's Personal Site</title>
-<style >
-
-body{
-  background-color: #abf0e9;
-}
-
-hr{
-  border-style: none;
-  border-top-style: dotted;
-  border-width: 5px;
-  border-color: grey;
-  width: 5%;
-
-}
-</style>
+  <link rel="stylesheet" href="CSS\Styles.css">
 
 </head>
 
@@ -29,7 +15,7 @@ hr{
       <td>
         <h1>Shashi Kumar B</h1>
         <p><em>Traning to be a <strong><a href="https://www.w3schools.com/whatis/">Web Developer</a></strong>.</em></p>
-        <p>I am learning Web Development from <strong>Angela Yu</strong>. I 💙 Cofee too.</p>
+        <p>I am learning Web Development from <strong>Angela Yu</strong>. I too 💙 Cofee.</p>
       </td>
     </tr>
   </table>
