--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><img src="Shashi.png" alt="Shashi's Profile Pic"></td>
       <td>
         <h1>Shashi Kumar B</h1>
-        <p><em>Traning to be a <strong><a href="https://www.w3schools.com/whatis/">Web Developer</a></strong>.</em></p>
+        <p><em>Training to be a <strong><a href="https://www.w3schools.com/whatis/">Web Developer</a></strong>.</em></p>
         <p>I am learning Web Development from <strong>Angela Yu</strong>. I too 💙 Cofee.</p>
       </td>
     </tr>
